# gtkterm

./: AUTHORS  CMakeLists.txt  ChangeLog  NEWS  README  README.md  TODO  configure  configure.in
po/: LINGUAS  cs.po  ru.po
src/: buffer.c  cmdline.c  fichier.c  gtkterm.c  logging.c  logging.h  macros.c  parsecfg.c  serie.c  term_config.c  term_config.h  widgets.c
